--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@mui/material": "^5.14.8",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
