--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.4",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
